sponsor banner should not display on mobile fixed

--- a/wwwdocs/css/main.css
+++ b/wwwdocs/css/main.css
@@ -3552,3 +3552,9 @@ div.card-container {
   transform-style: preserve-3d;
   -webkit-transform-style: preserve-3d
 }
+
+@media all and (max-width: 768px) {
+  #jssor_1{
+    display: none;
+  }
+}
